@@ -1,15 +1,13 @@
 package shop.duction.be.community.service;
 
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import shop.duction.be.community.dto.PopularityCommunitiesResponseDto;
-import shop.duction.be.community.entity.Community;
+import shop.duction.be.community.dto.PopularCommunitiesResponseDto;
 import shop.duction.be.community.repository.CommunityRepository;
+import shop.duction.be.community.repository.FavoriteCommunityRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -17,16 +15,29 @@ import java.util.stream.Collectors;
 public class CommunityService {
 
   private final CommunityRepository communityRepository;
-  private final ModelMapper modelMapper;
+  private final FavoriteCommunityRepository favoriteCommunityRepository;
 
-  public List<PopularityCommunitiesResponseDto> getPopularCommunities(int userId) {
-    List<Community> communities = communityRepository.findAll();
-    return communities.stream()
-            .map(community -> {
-              PopularityCommunitiesResponseDto dto = modelMapper.map(community, PopularityCommunitiesResponseDto.class);
-              dto.setFavorited(false);
-              return dto;
-            })
-            .collect(Collectors.toList());
+  public List<PopularCommunitiesResponseDto> getPopularCommunitiesByViews(Integer userId) {
+    List<PopularCommunitiesResponseDto> top10Communities = communityRepository.findPopularCommunitiesByViews()
+            .stream()
+            .limit(10)
+            .toList();
+
+    if (userId != null) {
+      List<Integer> communityIds = top10Communities.stream()
+              .map(PopularCommunitiesResponseDto::getCommunityId)
+              .toList();
+
+      List<Integer> ids = favoriteCommunityRepository.findFavoriteCommunitiesByUserAndCommunityIds(userId, communityIds);
+
+      return top10Communities.stream()
+              .peek(community -> {
+                boolean isFavorite = ids.contains(community.getCommunityId());
+                community.setFavorite(isFavorite);
+              })
+              .toList();
+    }
+
+    return top10Communities;
   }
 }
